SG: working on a fix for deploy

--- a/my-ticket-manager/client/package.json
+++ b/my-ticket-manager/client/package.json
@@ -1,5 +1,6 @@
 {
   "name": "client",
+  "homepage": "https://www.simongutierrez.at/react-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,7 +9,6 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "homepage": "./",
     "react-scripts": "^5.0.1"
   },
   "scripts": {
