--- a/my-ticket-manager/client/package.json
+++ b/my-ticket-manager/client/package.json
@@ -1,7 +1,8 @@
 {
   "name": "client",
-  "homepage": "https://www.simongutierrez.at/react-app",
+  "homepage": "https://www.simongutierrez.at/my-ticket-manager",
   "version": "0.1.0",
+  "private": "true",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
