--- a/my-ticket-manager/client/package.json
+++ b/my-ticket-manager/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "homepage": "https://www.simongutierrez.at/my-ticket-manager",
+  "homepage": ".",
   "version": "0.1.0",
   "private": "true",
   "dependencies": {
