SG: found correct path

--- a/my-ticket-manager/client/package.json
+++ b/my-ticket-manager/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "homepage": "https://bioverse-challenge-hvi96x0fu-simongutierrez-swes-projects.vercel.app/",
+  "homepage": "https://simongutierrez-swe.github.io//BIOVERSE-CHALLENGE/",
   "version": "0.1.0",
   "private": "true",
   "dependencies": {
