--- a/my-ticket-manager/client/package.json
+++ b/my-ticket-manager/client/package.json
@@ -3,16 +3,22 @@
   "homepage": "https://bioverse-challenge.vercel.app/",
   "version": "0.1.0",
   "private": "true",
+  "main": "routes.js",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "nodemon": "^2.0.16",
+    "pg": "^8.7.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start & nodemon backend/routes.js",
+    "start-server": "nodemon backend/routes.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -34,5 +40,7 @@
   },
   "devDependencies": {
     "react-router-dom": "^6.19.0"
-  }
+  },
+  "author": "",
+  "license": "ISC"
 }
